# kokuho-checker

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: deploy.yml
data/: edogawa_2026.json  fukuoka_2026.json  hiroshima_2026.json  kawasaki_2026.json  kobe_2026.json  kyoto_2026.json  meguro_2026.json  nagoya_2026.json  nakano_2026.json  osaka_2026.json  saitama_2026.json  sapporo_2026.json  tokyo_special_wards_unified_2026.json  yokohama_2026.json
scripts/: sync.sh
src/: calc.rs  household.rs  lib.rs  memo.rs  rates.rs  verdict.rs
tests/: engine.rs  memo.rs  tokyo_fy2026.rs
