[package]
name = "kokuho-checker"
version = "0.1.0"
edition = "2021"
description = "Verify Japanese National Health Insurance (kokuho) premium notices against published municipal rates"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
